--- a/FE_9_1_homework_html-basics/homework/index.html
+++ b/FE_9_1_homework_html-basics/homework/index.html
@@ -108,7 +108,7 @@ both           spaces and
                     <p>Let’s keep it simple. Italics are good to help set it off from the body text. Be sure to style the citation.</p>
                     <blockquote cite="#">
                         <p>"If you go back a few hundred years, what we take for granted today would seem like magic-being able to talk to people over long distances, to transmit images, flying, accessing vast amounts of data like an oracle. These are all things that would have been considered magic a few hundred years ago."
-                            <br> <a href="#">Elon Mask</a></p>
+                            <br> <a href="#">Elon Musk</a></p>
                     </blockquote>
                     <footer>© Copyright Epam Systems</footer>
                 </div>
