--- a/offline/FL_9_01_homework_css-frameworks/index.html
+++ b/offline/FL_9_01_homework_css-frameworks/index.html
@@ -1,56 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>HW1_CSS_Frameworks</title>
-	<link rel="stylesheet" href="styles/bootstrap.min.css">
-	<link rel="stylesheet/less"  type="text/css" href="styles/styles.less">
-	<script src="js/less.min.js"></script>
+  <meta charset="UTF-8">
+  <title>HW1_CSS_Frameworks</title>
+  <link rel="stylesheet" href="styles/bootstrap.min.css">
+  <link rel="stylesheet/less" type="text/css" href="styles/styles.less">
+  <script src="js/less.min.js"></script>
 </head>
 <body>
-<header>
-  
-      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom  ">
-          <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="img/logo.png" alt="logo">
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Classes <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contacts</a>
-              </li>
-                 </ul>
-              </div>
-        
-  </div>
-</nav>
-</header>
-<main>
-  
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom  ">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="img/logo.png" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Classes <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
     <div class="container">
-        <section class="mt-2">
-<h1 class="text-primary">Yoga Pilates</h1>
-<hr class="bg-primary">
-<div class="row mt-2" >
-    <div class="col-lg-8 col-md-12">
-      <img src="img/yoga.jpg" class="img-fluid" alt="yoga">
-    </div>
-    <div class="col-lg-4 col-md-12" >
-        <h3 class="text-primary">Class description</h3>
-        <p>This workout uses a series of exercise routines designed to increase your core strength &
-            improve your posture, energy, & flexibility. Pilates work is powered by breath, flow, &
-            centering. By focusing on the mind-body connection & using more efficient form, this workout
-            helps develop a stronger, leaner, healthier body. Appropriate for all fitness levels.</p>
+      <section class="mt-2">
+        <h1 class="text-primary">Yoga Pilates</h1>
+        <hr class="bg-primary">
+        <div class="row mt-2">
+          <div class="col-lg-8 col-md-12">
+            <img src="img/yoga.jpg" class="img-fluid" alt="yoga">
+          </div>
+          <div class="col-lg-4 col-md-12">
+            <h3 class="text-primary">Class description</h3>
+            <p>This workout uses a series of exercise routines designed to increase your core strength &
+              improve your posture, energy, & flexibility. Pilates work is powered by breath, flow, &
+              centering. By focusing on the mind-body connection & using more efficient form, this workout
+              helps develop a stronger, leaner, healthier body. Appropriate for all fitness levels.</p>
             <ul>
               <li>One Personal Trainer</li>
               <li>Big gym space for training</li>
@@ -58,49 +56,46 @@
               <li>Free locker</li>
               <li>Free before / after shower</li>
             </ul>
-  </div>
-    </div>
-</section>
-<section class="mt-2">
-    <h3 class="text-primary">Related classes</h3>
-    <hr class="bg-primary">
-    <div class="row">
-      <div class="col-md-3 col-sm-6 mb-3">
-        <div class="card border border-danger rounded-0">
-          <img class="card-img-top" src="img/cardio-kickbox.jpg" alt="cardio-kickbox">
-          <div class="card-text text-center bg-danger p-2 text-light">Cardio kickboxing</div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 mb-3">
-          <div class="card border border-primary rounded-0">
-            <img class="card-img-top" src="img/fitness.jpg" alt="fitness">
-            <div class="card-text text-center bg-primary p-2 text-light">Fitness xpress</div>
           </div>
-        </div> <div class="col-md-3 col-sm-6 mb-3">
+        </div>
+      </section>
+      <section class="mt-2">
+        <h3 class="text-primary">Related classes</h3>
+        <hr class="bg-primary">
+        <div class="row">
+          <div class="col-md-3 col-sm-6 mb-3">
+            <div class="card border border-danger rounded-0">
+              <img class="card-img-top" src="img/cardio-kickbox.jpg" alt="cardio-kickbox">
+              <div class="card-text text-center bg-danger p-2 text-light">Cardio kickboxing</div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 mb-3">
+            <div class="card border border-primary rounded-0">
+              <img class="card-img-top" src="img/fitness.jpg" alt="fitness">
+              <div class="card-text text-center bg-primary p-2 text-light">Fitness xpress</div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 mb-3">
             <div class="card border border-warning rounded-0">
               <img class="card-img-top" src="img/zumba.jpg" alt="zumba">
               <div class="card-text text-center bg-warning p-2 text-light">Zumba</div>
             </div>
-          </div> <div class="col-md-3 col-sm-6 mb-3">
-              <div class="card border border-success rounded-0">
-                <img class="card-img-top" src="img/bootcamp.jpg" alt="bootcamp">
-                <div class="card-text text-center bg-success p-2 text-light">Bootcamp</div>
-              </div>
+          </div>
+          <div class="col-md-3 col-sm-6 mb-3">
+            <div class="card border border-success rounded-0">
+              <img class="card-img-top" src="img/bootcamp.jpg" alt="bootcamp">
+              <div class="card-text text-center bg-success p-2 text-light">Bootcamp</div>
             </div>
-         </div>
-</section>
-
+          </div>
+        </div>
+      </section>
     </div>
-  
-  
-    
-  
-</main>
-<footer class="container mt-3">
-  <div class="bg-secondary text-light p-3 ">&copy; Epam Font-end lab, 2018</div>
-</footer>
-	<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+  </main>
+  <footer class="container mt-3">
+    <div class="bg-secondary text-light p-3 ">&copy; Epam Font-end lab, 2018</div>
+  </footer>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
-</html> 
+</html>
