--- a/offline/FL_9_2_homework_css-optimization/homework/index.html
+++ b/offline/FL_9_2_homework_css-optimization/homework/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="uk">
+<html lang="en">
 <head>
 <meta charset="utf-8">
     <title>FL_9_2_homework_css-optimization</title>
